--- a/BITSIER/src/pages/home/home.html
+++ b/BITSIER/src/pages/home/home.html
@@ -1,18 +1,26 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<ion-content id="page1" style="background-color:#FFD322;">
+  <div class="spacer" style="width:320px;height:20px;" id="home-spacer2"></div>
+  <h3 id="home-heading2" style="color:#1561C2;font-weight:lighter;text-align:center;">
+    WELCOME TO
+  </h3>
+  <h1 id="home-heading1" style="color:#1561C2;text-align:center;">
+    BITSIER
+  </h1>
+  <div>
+    <img src="assets/img/hSditu4WQNSeQluGdgVE_v0mPcfZ9QtekyTfmVkz4_BITSLogo.png" style="display:block;width:60%;height:auto;margin-left:auto;margin-right:auto;" />
+  </div>
+  <div class="spacer" style="width:320px;height:44px;" id="home-spacer3"></div>
+  <div class="spacer" style="width:320px;height:9px;" id="home-spacer5"></div>
+  <button id="home-button5" ion-button color="positive" block icon-left on-click="goToBITSIER()">
+    <ion-icon name="log-in"></ion-icon>
+    Login
+  </button>
+  <button id="home-button4" ion-button color="assertive" block icon-left>
+    <ion-icon name="google"></ion-icon>
+    Sign Up
+  </button>
+  <div class="spacer" style="width:320px;height:17px;" id="home-spacer6"></div>
+  <h5 id="home-heading3" style="color:#FF0063;font-weight:lighter;text-align:center;">
+    With Love From BITS Pilani
+  </h5>
 </ion-content>
