--- a/BITSIER/src/pages/search-items/search-items.html
+++ b/BITSIER/src/pages/search-items/search-items.html
@@ -2,6 +2,7 @@
   <form id="searchItems-form2">
     <ion-searchbar placeholder="Search For Items " name="shopSearch" id="searchItems-search2"></ion-searchbar>
     <div class="spacer" style="width:300px;height:19px;" id="searchItems-spacer8"></div>
+<ion-list>
     <ion-item color="none" id="searchItems-list-item24">
       <ion-thumbnail item-left>
         <img src="assets/img/DbYLYSkqS9Ct4yLeWG9P_ouroboros-dock.png" />
@@ -9,6 +10,8 @@
       <h2>
         Razer Wireless Mouse
       </h2>
+      <p> The Oborus 2.0 by Razer. Brand new condition without the packaging. </p>
+      <span> <h4> Extra Information </h4> </span>
     </ion-item>
     <div class="spacer" style="width:300px;height:19px;" id="searchItems-spacer12"></div>
     <ion-item color="none" id="searchItems-list-item25">
@@ -37,5 +40,6 @@
         Item
       </h2>
     </ion-item>
+  </ion-list>
   </form>
 </ion-content>
