--- a/BITSIER/src/pages/home/home.html
+++ b/BITSIER/src/pages/home/home.html
@@ -11,11 +11,11 @@
   </div>
   <div class="spacer" style="width:320px;height:44px;" id="home-spacer3"></div>
   <div class="spacer" style="width:320px;height:9px;" id="home-spacer5"></div>
-  <button id="home-button5" ion-button color="positive" block icon-left on-click="goToBITSIER()">
+  <button id="home-button5" ion-button color="positive" full icon-left on-click="goToBITSIER()">
     <ion-icon name="log-in"></ion-icon>
     Login
   </button>
-  <button id="home-button4" ion-button color="assertive" block icon-left>
+  <button id="home-button4" ion-button color="assertive" full icon-left>
     <ion-icon name="google"></ion-icon>
     Sign Up
   </button>
