--- a/BITSIER/src/pages/search-items/search-items.html
+++ b/BITSIER/src/pages/search-items/search-items.html
@@ -53,4 +53,9 @@
     </ion-item>
   </ion-list>
   </form>
+  <ion-fab right bottom #fab2>
+      <button ion-fab color="danger"><ion-icon name="add"></ion-icon>
+  </button>
+      
+    </ion-fab>
 </ion-content>
