--- a/BITSIER/src/pages/b-itsier/b-itsier.html
+++ b/BITSIER/src/pages/b-itsier/b-itsier.html
@@ -20,37 +20,24 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page2" style="background-color:#FFD322;">
-<ion-list>
+<ion-list *ngFor="let news of objectiveNews">
 
       <ion-card id="bITSIER-card22">
       <ion-item color="none" id="bITSIER-list-item19">
         <ion-icon name="ionic" item-left></ion-icon>
-        Embryo Club
-      </ion-item>
+        {{news.title}}
+        </ion-item>
 
       <ion-item id="bITSIER-list-item-container5">
         <div id="bITSIER-markdown5" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#000000;">
-            Special Lecture By Dr. Richard Feynman
+            {{news.description}}
           </p>
         </div>
-      </ion-item>
-    </ion-card>
-    <ion-card id="bITSIER-card23">
-        <ion-item color="none" id="bITSIER-list-item21">
-          <ion-icon name="ionic" item-left></ion-icon>
-          Music Club
-        </ion-item>
         <div style="width:100%;height:220px;margin:0px 0px;line-height:250px;background-color:#e8ebef;text-align:center;">
           <i class="icon ion-image" style="font-size:64px;color:#888;vertical-align:middle;"></i>
         </div>
-        <ion-item id="bITSIER-list-item-container6">
-          <div id="bITSIER-markdown6" class="show-list-numbers-and-dots">
-            <p style="margin-top:0px;color:#000000;">
-              Psenti Nite 2k17 in collab with Gurukul
-            </p>
-          </div>
-        </ion-item>
+      </ion-item>
     </ion-card>
   </ion-list>
 
