--- a/BITSIER/src/pages/search-items/search-items.html
+++ b/BITSIER/src/pages/search-items/search-items.html
@@ -54,8 +54,8 @@
   </ion-list>
   </form>
   <ion-fab right bottom #fab2>
-      <button ion-fab color="danger"><ion-icon name="add"></ion-icon>
+      <button ion-fab color="danger" (click)="addItem()"><ion-icon name="add"></ion-icon>
   </button>
-      
+
     </ion-fab>
 </ion-content>
